third_party/move/move-compiler-v2/tests/checking/control_flow/for_loop_empty_novar.exp

Diagnostics:
warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/checking/control_flow/for_loop_empty_novar.move:4:9
  │
4 │         for (_ in 0..10) {};
  │         ^^^^^^^^^^^^^^^^^^^

error: undeclared `_`
  ┌─ tests/checking/control_flow/for_loop_empty_novar.move:4:9
  │
4 │         for (_ in 0..10) {};
  │         ^^^^^^^^^^^^^^^^^^^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/checking/control_flow/for_loop_empty_novar.move:4:28
  │
4 │         for (_ in 0..10) {};
  │                            ^
