third_party/move/move-compiler-v2/tests/checking/control_flow/for_loop_empty_novar.move
//# run
script {
    fun main(): () {
        for (_ in 0..10) {};
    }
}
